ADD: title, photos and first paragraph

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!--header e logo-->
     <header class="main-header">
         <img class="logo" src="./img/logo.svg" alt="">
-
     </header>
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <p class="credit">Scritto da <span style="color: rgb(78, 160, 255);">The Booleaner</span></p>
+        <p class="credit" style="font-size: 15px; margin-bottom: 20px;">il 10/10/2020</p>
+        <div><img src="./img/tim-1.jpg" alt=""></div>
+        <div><img src="./img/tim-2.jpg" alt=""></div>
+        <figcaption style="font-size: 10px; line-height: 5px;">
+            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+            <p>2nd Photo: Wikimedia, by Paul Klarke</p>
+        </figcaption>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatem nam delectus. Cum tenetur iure magnam provident, rerum ad, earum distinctio, rem id officia sapiente! Laboriosam, ad esse eum cumque sunt, debitis adipisci ullam accusantium aperiam saepe quia ipsam voluptates obcaecati iste pariatur, <span style="background-color: yellow;">corrupti qui quis labore optio quam inventore ea. Ratione nulla ea itaque voluptate explicabo ipsa.</span> Quia similique itaque magnam quaerat id, nam, dolorem officiis, beatae commodi temporibus eveniet. Quidem inventore facilis molestiae, beatae dignissimos magnam sit deserunt optio tempore earum maiores?
+            </p>
+        </section>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
