ADD: list, table and second paragraph

--- a/index.html
+++ b/index.html
@@ -12,21 +12,64 @@
         <img class="logo" src="./img/logo.svg" alt="">
     </header>
     <main>
+        <!--titolo autore e data-->
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         <p class="credit">Scritto da <span style="color: rgb(78, 160, 255);">The Booleaner</span></p>
         <p class="credit" style="font-size: 15px; margin-bottom: 20px;">il 10/10/2020</p>
-        <div><img src="./img/tim-1.jpg" alt=""></div>
-        <div><img src="./img/tim-2.jpg" alt=""></div>
-        <figcaption style="font-size: 10px; line-height: 5px;">
-            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
-            <p>2nd Photo: Wikimedia, by Paul Klarke</p>
-        </figcaption>
+        <!--foto e didascalie-->
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatem nam delectus. Cum tenetur iure magnam provident, rerum ad, earum distinctio, rem id officia sapiente! Laboriosam, ad esse eum cumque sunt, debitis adipisci ullam accusantium aperiam saepe quia ipsam voluptates obcaecati iste pariatur, <span style="background-color: yellow;">corrupti qui quis labore optio quam inventore ea. Ratione nulla ea itaque voluptate explicabo ipsa.</span> Quia similique itaque magnam quaerat id, nam, dolorem officiis, beatae commodi temporibus eveniet. Quidem inventore facilis molestiae, beatae dignissimos magnam sit deserunt optio tempore earum maiores?
+            <div><img src="./img/tim-1.jpg" alt=""></div>
+            <div><img src="./img/tim-2.jpg" alt=""></div>
+            <figcaption style="font-size: 10px; line-height: 5px;">
+                <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                <p>2nd Photo: Wikimedia, by Paul Klarke</p>
+            </figcaption>
+        </section>
+        <!--primo paragrafo testo-->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatem nam delectus. Cum tenetur iure magnam provident, rerum ad, earum distinctio, rem id officia sapiente! Laboriosam, ad esse eum cumque sunt, debitis adipisci ullam accusantium aperiam saepe quia ipsam voluptates obcaecati iste pariatur, <span class="highlighted">corrupti qui quis labore optio quam inventore ea. Ratione nulla ea itaque voluptate explicabo ipsa.</span> Quia similique itaque magnam quaerat id, nam, dolorem officiis, beatae commodi temporibus eveniet. Quidem inventore facilis molestiae, beatae dignissimos magnam sit deserunt optio tempore earum maiores?
             </p>
         </section>
+        <!--lista-->
         <section>
-            
+           <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa a voluptate quae voluptatum et commodi perferendis consectetur beatae autem natus ut, earum rem dolorum libero! Minus optio dolor consequuntur.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolore debitis, delectus sit aperiam rem nobis officiis dolorum suscipit ipsa accusantium aut dicta molestiae inventore vitae dolor porro, dolorem tempore?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate eos sint ea exercitationem quod possimus! Quisquam impedit omnis blanditiis consequatur corporis voluptates voluptas hic? In, veniam. Temporibus, rem quas!</li>
+           </ul> 
+        </section>
+        <!--tabella-->
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="blue-row">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sit iusto, esse explicabo ut debitis consequuntur quia doloribus. Corporis voluptatibus eos libero totam odio ad excepturi suscipit, cum quis optio?</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sit iusto, esse explicabo ut debitis consequuntur quia doloribus. Corporis voluptatibus eos libero totam odio ad excepturi suscipit, cum quis optio?</td>
+                    </tr>
+                    <tr class="blue-row">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sit iusto, esse explicabo ut debitis consequuntur quia doloribus. Corporis voluptatibus eos libero totam odio ad excepturi suscipit, cum quis optio?</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <!--secondo paragrafo-->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati magnam aspernatur maiores nulla alias dolorem asperiores repellendus facilis, ducimus ipsam fugiat quos impedit enim officiis soluta eveniet, dolores, error possimus culpa non illo ratione. Ipsam porro officia impedit minima recusandae nostrum nam aliquam ducimus. Eaque placeat modi at neque, rerum, quae similique mollitia, quod blanditiis alias architecto. <span class="highlighted">Obcaecati eveniet in quidem deleniti molestiae asperiores tenetur perferendis, ullam voluptate iure quos nisi distinctio quis quae, dolore reiciendis?</span> Exercitationem itaque cum ab?</p>
         </section>
     </main>
 </body>
