--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
                 </tbody>
             </table>
         </section>
-        <!--secondo paragrafo-->
+        <!--secondo paragrafo testo-->
         <section>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati magnam aspernatur maiores nulla alias dolorem asperiores repellendus facilis, ducimus ipsam fugiat quos impedit enim officiis soluta eveniet, dolores, error possimus culpa non illo ratione. Ipsam porro officia impedit minima recusandae nostrum nam aliquam ducimus. Eaque placeat modi at neque, rerum, quae similique mollitia, quod blanditiis alias architecto. <span class="highlighted">Obcaecati eveniet in quidem deleniti molestiae asperiores tenetur perferendis, ullam voluptate iure quos nisi distinctio quis quae, dolore reiciendis?</span> Exercitationem itaque cum ab?</p>
         </section>
+        <!--anteprima articoli relativi-->
+        <aside>
+            <h4>Potrebbero interessarti</h4>
+            <div id="anteprima1"><strong>Lorem ipsum dolor</strong></div>
+            <div id="anteprima2"><strong>Lorem ipsum dolor</strong></div>
+        </aside>
     </main>
 </body>
 </html>
